--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT = 8080
-MONGODBURI = mongodb://localhost:27017/ecommerce
+MONGODBURI = mongodb+srv://new-user:Harish@amazongstackoverflow.8voqmd7.mongodb.net/ecommerce
 PRIVATE_KEY = simplesecretkey
