payment gateway added

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT = 8080
 MONGODBURI = mongodb+srv://new-user:Harish@amazongstackoverflow.8voqmd7.mongodb.net/ecommerce
 PRIVATE_KEY = simplesecretkey
+RAZORID = rzp_test_qzkbkoKqCTLxl7
+RAZORSECRETKEY = yCr4W4pSoomSWWmJompkgtaL
